# GenAI-Projects

./: .gitignore  Code_Convertor.ipynb  Connect_four_Game.ipynb
Brochure_using_llm/: main.py  scraper.py  test.ipynb
Thee_Friends/: main.ipynb
coder_crew/: README.md  pyproject.toml
coder_crew/src/coder_crew/: crew.py  main.py
coder_crew/src/coder_crew/config/: agents.yaml  tasks.yaml
stock_picker_crew/: README.md  pyproject.toml
stock_picker_crew/src/stock_picker_crew/: crew.py  main.py
stock_picker_crew/src/stock_picker_crew/config/: agents.yaml  tasks.yaml
