[project]
name = "coder_crew"
version = "0.1.0"
description = "Coder_Crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.13.0"
]

[project.scripts]
coder_crew = "coder_crew.main:run"
run_crew = "coder_crew.main:run"
train = "coder_crew.main:train"
replay = "coder_crew.main:replay"
test = "coder_crew.main:test"
run_with_trigger = "coder_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
