[project]
name = "stock_picker_crew"
version = "0.1.0"
description = "stock_picker_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.13.0",
]

[project.scripts]
stock_picker_crew = "stock_picker_crew.main:run"
run_crew = "stock_picker_crew.main:run"
train = "stock_picker_crew.main:train"
replay = "stock_picker_crew.main:replay"
test = "stock_picker_crew.main:test"
run_with_trigger = "stock_picker_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
